# install-nix

./: .gitignore  CHANGELOG.md  Main.hs  README.md  default.nix  install-nix  install-nix.cabal  install-nix.nix  shake-for-scripting.md
