cabal-version:       2.4

name:                install-nix
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Robin Bate Boerop
maintainer:          me@robinbb.com
extra-source-files:  CHANGELOG.md

executable shake-build-project
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , shake
  -- hs-source-dirs:
  default-language:    Haskell2010
